<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/normal_margin">

    <com.sundevs.ihsan.homycare.util.font.FontOpenSans
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/dark_grey_002" />

    <com.sundevs.ihsan.homycare.util.font.FontOpenSans
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/sign_in_desc"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:hint="@string/email_address"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bt_sign_in"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:background="@color/blue_001"
        android:foreground="?selectableItemBackground"
        android:text="@string/ok"
        android:textColor="@color/white" />
</LinearLayout>