<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sundevs.ihsan.homycare.view.activities.LoginActivity">
    <com.sundevs.ihsan.homycare.util.font.FontOpenSans
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen40dp"
        android:textSize="@dimen/text30sp"/>

    <com.sundevs.ihsan.homycare.util.font.FontLatoSemiBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/deskripsi"
        android:textSize="@dimen/text16sp"
        android:layout_marginTop="@dimen/dimen10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen300dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/dimen160dp"
            android:layout_height="@dimen/dimen160dp"
            android:src="@drawable/ic_motherhood"
            android:contentDescription="@string/todo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/dimen10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/dimen0dp"
            android:layout_weight="5"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/bg_rounded_white"
            android:layout_height="wrap_content"
            android:text="@string/login" />
        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="@dimen/dimen0dp"
            android:layout_weight="5"
            android:text="@string/daftar"
            android:layout_margin="@dimen/dimen8"
            android:background="@drawable/bg_rounded_white"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
