<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.dialog.HubDialog">

    <include layout="@layout/header_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen8">

        <Button
            android:id="@+id/btn_sms"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:background="@color/color_buttondetail"
            android:text="@string/sms"
            android:textColor="@color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_telp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:background="@color/color_buttondetail"
            android:text="@string/telepon"
            android:textColor="@color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_wa"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen50dp"
            android:layout_marginTop="@dimen/dimen10dp"
            android:background="@color/color_buttondetail"
            android:text="@string/whatsapp"
            android:textColor="@color/white"
            android:textSize="@dimen/text16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>