<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sundevs.ihsan.homycare.view.activities.ProfileActivity">

    <include layout="@layout/header_detail" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen130dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:padding="@dimen/dimen8">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ic_profile"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/emty_profile"
                    app:civ_border_color="@color/black"
                    app:civ_border_width="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                    android:id="@+id/txt_profile_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kherma_yunita_sari" />

                <Button
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_grey_002"
                    android:text="@string/edit"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen180dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardUseCompatPadding="true">
        <Button
            android:id="@+id/btn_ganti_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_grey_002"
            android:text="@string/about_me"
            android:textColor="@color/white" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen16"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen10dp">


            <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                android:id="@+id/txt_alamat_profile"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen10dp"
                android:layout_height="wrap_content"
                android:text="@string/default_alamat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/view" />

            <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                android:id="@+id/txt_nohp_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_nohp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/view" />


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
