<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen150dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical"
                android:padding="@dimen/dimen10dp">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/img_foto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_name" />

                <TextView
                    android:id="@+id/txt_umur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_umur" />

                <TextView
                    android:id="@+id/txt_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_alamat" />

                <TextView
                    android:id="@+id/txt_jarak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_alamat" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>