<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sundevs.ihsan.homycare.view.activities.DetailActivity">

    <include layout="@layout/header_detail" />

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen160dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen150dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical"
                android:padding="@dimen/dimen10dp">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/img_foto_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:orientation="vertical">

                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                    android:id="@+id/txt_nama_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_name" />

                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                    android:id="@+id/txt_umur_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_umur" />

                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                    android:id="@+id/txt_pendidikan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_alamat" />

                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                    android:id="@+id/txt_alamat_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_alamat" />

                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                    android:id="@+id/txt_harga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_alamat" />

                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
                    android:id="@+id/txt_jarak_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_alamat" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/booking" />
</LinearLayout>
