<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sundevs.ihsan.homycare.view.activities.RegisterActivity">

    <include layout="@layout/header_register" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/deals_view_pager_height"
                android:padding="@dimen/dimen16">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/emty_profile"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/flotbtn_image"
                        android:layout_width="@dimen/dimen30dp"
                        android:layout_height="@dimen/dimen30dp"
                        android:layout_alignBottom="@+id/profile_image"
                        android:layout_alignLeft="@+id/profile_image"
                        android:layout_alignStart="@+id/profile_image"
                        android:layout_gravity="bottom|end"
                        android:layout_marginLeft="70dp"
                        android:scaleType="center"
                        android:layout_marginStart="70dp"
                        android:src="@drawable/ic_add_black_24dp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/dimen16">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_nama_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama"
                        android:inputType="textCapWords" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen8">

                    <EditText
                        android:id="@+id/et_nohp_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_hp"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen8">

                    <EditText
                        android:id="@+id/et_alamat_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alamat"
                        android:inputType="textCapSentences" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen8">

                    <EditText
                        android:id="@+id/et_password_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_daftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen8"
                    android:background="@color/color_buttondetail"
                    android:textColor="@color/white"
                    android:text="@string/daftar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
